[gd_scene load_steps=5 format=3 uid="uid://byslwq5ohkymk"]

[ext_resource type="Script" path="res://scripts/and_gate.gd" id="1_vtyvw"]
[ext_resource type="PackedScene" uid="uid://cqnj3bx1nrpms" path="res://scenes/button.tscn" id="3_b2imy"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dffci"]
load_path = "res://.godot/imported/AND.png-97c93b23f89fb50a63432eac1ec5b30c.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jt1c5"]
size = Vector2(117, 98)

[node name="AndGate" type="StaticBody2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_vtyvw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("CompressedTexture2D_dffci")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.499998, 9.53674e-07)
shape = SubResource("RectangleShape2D_jt1c5")

[node name="Output" type="Node2D" parent="."]

[node name="OutputButton" parent="Output" instance=ExtResource("3_b2imy")]
offset_left = 47.1429
offset_right = 67.1429

[node name="Input" type="Node2D" parent="."]

[node name="InputButton1" parent="Input" instance=ExtResource("3_b2imy")]
anchors_preset = -1
anchor_left = 0.0
offset_left = -58.5714
offset_top = 11.4286
offset_right = -33.5714
offset_bottom = 36.4286

[node name="InputButton2" parent="Input" instance=ExtResource("3_b2imy")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -61.4286
offset_top = -37.1429
offset_right = -36.4286
offset_bottom = -12.1429
grow_horizontal = 1
grow_vertical = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="pressed" from="Output/OutputButton" to="." method="_on_output_button_pressed"]
[connection signal="pressed" from="Input/InputButton1" to="." method="_on_input_button_1_pressed"]
[connection signal="pressed" from="Input/InputButton2" to="." method="_on_input_button_2_pressed"]
